Kitchensink: WaitForMultipleObjects failed in hotspot\src\os\windows\vm\os_windows.cpp: 3844

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b43
    • x86_64
    • windows
    • Verified

        There is not a lot of information to go on here. All I can find is this snippet from a log file:

        [stress.process.err] Java HotSpot(TM) 64-Bit Server VM warning: WaitForMultipleObjects failed in C:\jprt\T\P1\165256.jianzhou\s\hotspot\src\os\windows\vm\os_windows.cpp: 3844

        os_windows.cpp:3844 is in the newly updated os::win32::exit_process_or_thread(Ept what, int exit_code)



        RULE bigapps/Kitchensink/nowarnings Unknown Found warnings in server log: WaitForMultipleObjects failed in ...\hotspot\src\os\windows\vm\os_windows.cpp: ...

              Assignee:
              Ivan Gerasimov
              Reporter:
              Staffan Larsen (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: