8064694: Kitchensink: WaitForMultipleObjects failed in hotspot\src\os\windows\vm\os_windows.cpp: 3844

Increase the timeout in debug builds; raise the priority of exiting threads

Reviewed-by: dcubed, dholmes